load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:scion.bzl", "scion_go_binary")

scion_go_binary(
    name = "drkeymockup",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "hellodrkey.go",
    ],
    importpath = "github.com/scionproto/scion/go/drkeymockup",
    visibility = ["//visibility:private"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/sciond:go_default_library",
        "//go/drkeymockup/drkey:go_default_library",
        "//go/drkeymockup/drkey/protocol:go_default_library",
        "//go/drkeymockup/mockupsciond:go_default_library",
    ],
)
