load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "sciond_drkey.go",
    ],
    importpath = "github.com/scionproto/scion/go/drkeymockup/mockupsciond",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/drkeymockup/drkey:go_default_library",
        "//go/drkeymockup/drkey/protocol:go_default_library",
    ],
)
